@@ -69,9 +69,8 @@ public class MaatCalculateContributionService {
             return calculateContributionDTO.getDisposableIncomeAfterMagHardship();
         } else if (calculateContributionDTO.getTotalAnnualDisposableIncome() != null) {
             return calculateContributionDTO.getTotalAnnualDisposableIncome();
-        } else {
-            return BigDecimal.ZERO;
         }
+        return BigDecimal.ZERO;
     }
 
     public static String getEffectiveDateByNewWorkReason(final CalculateContributionDTO calculateContributionDTO,
@@ -131,14 +130,13 @@ public class MaatCalculateContributionService {
         }
         if (committalDate == null) {
             return DateUtil.parseLocalDate(assessmentDate);
-        } else {
-            LocalDate assDate = DateUtil.parseLocalDate(assessmentDate);
-            if (committalDate.isAfter(assDate)) {
-                return committalDate;
-            } else {
-                return assDate;
-            }
         }
+        LocalDate effectiveDate = DateUtil.parseLocalDate(assessmentDate);
+        if (committalDate.isAfter(effectiveDate)) {
+            return committalDate;
+        }
+        return effectiveDate;
+
     }
 
     public ApiMaatCalculateContributionResponse calculateContribution(
@@ -154,8 +152,8 @@ public class MaatCalculateContributionService {
     }
 
     public List<ApiContributionSummary> getContributionSummaries(final int repId) {
-        List<ContributionsSummaryDTO> contribSummaryList = maatCourtDataService.getContributionsSummary(repId);
-        return contribSummaryList != null ? contribSummaryList.stream().map(contributionSummaryMapper::map)
+        List<ContributionsSummaryDTO> contributionSummaryList = maatCourtDataService.getContributionsSummary(repId);
+        return contributionSummaryList != null ? contributionSummaryList.stream().map(contributionSummaryMapper::map)
                 .toList() : List.of();
     }
 
@@ -205,11 +203,10 @@ public class MaatCalculateContributionService {
             return null;
         }
 
-        ApiCrownCourtOutcome apiCrownCourtOutcome = crownCourtOutcomeList.get(0);
+        ApiCrownCourtOutcome apiCrownCourtOutcome = crownCourtOutcomeList.getFirst();
         if (apiCrownCourtOutcome == null || apiCrownCourtOutcome.getOutcome() == null) {
             return null;
         }
-
         return apiCrownCourtOutcome.getOutcome().getCode();
     }
 
@@ -291,9 +288,8 @@ public class MaatCalculateContributionService {
             CreateContributionRequest createContributionRequest =
                     createContributionRequestMapper.map(calculateContributionDTO, result);
             return maatCourtDataService.createContribution(createContributionRequest);
-        } else {
-            return null;
         }
+        return null;
     }
 
     public ContributionResult calculateContributions(final CalculateContributionDTO calculateContributionDTO,
